src/test/ui/parser/issue-14303-fncall.generic_arg.stderr
error[E0747]: inferred provided when a lifetime was expected
  --> $DIR/issue-14303-fncall.rs:16:26
   |
LL |         .collect::<Vec<S<_, 'a>>>();
   |                          ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0747`.
